<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.fragmentdemo.DisplayFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="35dp"
            android:text="@string/Name1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_alignStart="@+id/tvName"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="35dp"
            android:text="@string/Email1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/tvDep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvEmail"
            android:layout_alignStart="@+id/tvEmail"
            android:layout_below="@+id/ibEmail"
            android:layout_marginTop="18dp"
            android:text="@string/Department"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/tvMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ibMood"
            android:layout_alignEnd="@+id/tvEmail"
            android:layout_alignRight="@+id/tvEmail"
            android:layout_marginBottom="15dp"
            android:text="@string/mood1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvName"
            android:layout_alignBottom="@+id/tvName"
            android:layout_alignLeft="@+id/textEmail"
            android:layout_alignStart="@+id/textEmail"
            android:text="@string/nulll"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvEmail"
            android:layout_alignBottom="@+id/tvEmail"
            android:layout_centerHorizontal="true"
            android:text="@string/nulll"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textDep"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textEmail"
            android:layout_alignRight="@+id/textEmail"
            android:layout_alignTop="@+id/tvDep"
            android:text="@string/nulll"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textMood"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvMood"
            android:layout_alignBottom="@+id/tvMood"
            android:layout_alignLeft="@+id/textDep"
            android:layout_alignStart="@+id/textDep"
            android:text="@string/nulll"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageButton
            android:id="@+id/ibName"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_action_edit" />

        <ImageButton
            android:id="@+id/ibEmail"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/ibName"
            android:layout_alignStart="@+id/ibName"
            android:layout_below="@+id/ibName"
            android:src="@drawable/ic_action_edit" />

        <ImageButton
            android:id="@+id/ibDep"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/ibEmail"
            android:layout_alignStart="@+id/ibEmail"
            android:layout_below="@+id/ibEmail"
            android:src="@drawable/ic_action_edit" />

        <ImageButton
            android:id="@+id/ibMood"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/ibDep"
            android:layout_alignStart="@+id/ibDep"
            android:layout_below="@+id/ibDep"
            android:src="@drawable/ic_action_edit" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textDep"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textDep"
            android:text="@string/si"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </RelativeLayout>
</FrameLayout>
